--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -84,7 +84,7 @@ figcaption {
   position: absolute;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(180, 176, 176, 0.7);
   z-index: -1;
 }
 
@@ -221,6 +221,19 @@ figcaption {
   bottom: 0;
   right: 0;
 }
+.info.bottom button {
+  background: transparent;
+  border: 1px solid #fff;
+  padding: 5px 10px;
+  color: #fff;
+  border-radius: 50px;
+  box-shadow: 0 0 0 #fff inset;
+  transition: all 0.4s;
+}
+.info.bottom button:hover {
+  box-shadow: 0 -50px 0 #fff inset;
+  color: #000;
+}
 .info h1 {
   font-weight: 400;
   font-size: 20px;
@@ -255,16 +268,146 @@ figcaption {
   color: #000;
 }
 
-button {
-  background: transparent;
-  border: 1px solid #fff;
-  padding: 5px 10px;
-  color: #fff;
-  border-radius: 50px;
-  box-shadow: 0 0 0 #fff inset;
-  transition: all 0.4s;
+#cont-wrap {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  transform: scale(0);
 }
-button:hover {
-  box-shadow: 0 -50px 0 #fff inset;
-  color: #000;
+#cont-wrap .cont-bg {
+  background: rgba(119, 92, 79, 0.657);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#cont-wrap .cont-box {
+  background: #fff;
+  border-radius: 5px;
+  padding: 3vw;
+  max-width: 60vw;
+}
+#cont-wrap .cont-box h2 {
+  background: #fff;
+  border-radius: 5px;
+  padding: 3vw;
+  max-width: 60vw;
+}
+#cont-wrap .cont-box p {
+  font-weight: 300;
+  line-height: 1.6;
+}
+#cont-wrap .cont-box button {
+  float: right;
+  border: 1px solid #000;
+  background: #000;
+  border-radius: 20px;
+  color: #fff;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+#cont-wrap.show {
+  -webkit-animation: unfoldIn 1s ease forwards;
+          animation: unfoldIn 1s ease forwards;
+}
+
+@-webkit-keyframes unfoldIn {
+  0% {
+    transform: scaley(0.005) scalex(0);
+  }
+  50% {
+    transform: scaley(0.005) scalex(1);
+  }
+  100% {
+    transform: scaley(1) scalex(1);
+  }
+}
+
+@keyframes unfoldIn {
+  0% {
+    transform: scaley(0.005) scalex(0);
+  }
+  50% {
+    transform: scaley(0.005) scalex(1);
+  }
+  100% {
+    transform: scaley(1) scalex(1);
+  }
+}
+#cont-wrap.show.hide {
+  -webkit-animation: unfoldOut 1s ease forwards;
+          animation: unfoldOut 1s ease forwards;
+}
+
+@-webkit-keyframes unfoldOut {
+  0% {
+    transform: scaley(1) scalex(1);
+  }
+  50% {
+    transform: scaley(0.005) scalex(1);
+  }
+  100% {
+    transform: scaley(0.005) scalex(0);
+  }
+}
+
+@keyframes unfoldOut {
+  0% {
+    transform: scaley(1) scalex(1);
+  }
+  50% {
+    transform: scaley(0.005) scalex(1);
+  }
+  100% {
+    transform: scaley(0.005) scalex(0);
+  }
+}
+#cont-wrap.show .cont-bg .cont-box {
+  transform: scale(0);
+  -webkit-animation: zoomIn 0.5s 0.8s ease forwards;
+          animation: zoomIn 0.5s 0.8s ease forwards;
+}
+
+#cont-wrap.show.hide .cont-bg .cont-box {
+  transform: scale(0);
+  -webkit-animation: zoomOut 0.5s ease forwards;
+          animation: zoomOut 0.5s ease forwards;
+}
+
+@-webkit-keyframes zoomIn {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes zoomOut {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes zoomOut {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
