--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -122,7 +122,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
         @include content;
         width: 100%;
         height: 100vh;
-        background: rgba(0, 0, 0, 0.7);
+        background: rgba(180, 176, 176, 0.7);
         z-index: -1;
     }
 }
@@ -223,6 +223,21 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
         position: absolute;
         bottom: 0;
         right: 0;
+
+        button {
+            background: transparent;
+            border : 1px solid #fff;
+            padding: 5px 10px;
+            color: #fff;
+            border-radius: 50px;
+            box-shadow : 0 0 0 #fff inset;
+            transition : all 0.4s;
+        
+            &:hover {
+                box-shadow : 0 -50px 0 #fff inset;
+                color : #000;
+            }
+        }
     }
 
 
@@ -268,19 +283,87 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     }
 }
 
-button {
-    background: transparent;
-    border : 1px solid #fff;
-    padding: 5px 10px;
-    color: #fff;
-    border-radius: 50px;
-    box-shadow : 0 0 0 #fff inset;
-    transition : all 0.4s;
 
-    &:hover {
-        box-shadow : 0 -50px 0 #fff inset;
-        color : #000;
+
+#cont-wrap {
+    position :fixed;
+    left: 0; top: 0;
+    width: 100%; height: 100vh;
+    z-index : 1000;
+    transform : scale(0);
+
+    .cont-bg {
+        background: rgba(119, 92, 79, 0.657);
+        height: 100vh;
+        display : flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .cont-box {
+        background: #fff;
+        border-radius :5px;
+        padding: 3vw;
+        max-width : 60vw;
+
+        h2 {
+            background: #fff;
+            border-radius :5px;
+            padding: 3vw;
+            max-width : 60vw;
+        }
+        p {
+            font-weight: 300;
+            line-height: 1.6;
+        }
+        button {
+            float : right;
+            border : 1px solid #000;
+            background: #000;
+            border-radius : 20px;
+            color : #fff;
+            padding: 5px 10px;
+            cursor : pointer;
+          }
     }
 }
 
+#cont-wrap.show {
+    animation : unfoldIn 1s ease forwards;
+}
+@keyframes unfoldIn {
+    0% { transform : scaley(0.005) scalex(0);}
+    50% { transform : scaley(0.005) scalex(1);}
+    100% { transform : scaley(1) scalex(1);}
+  }
 
+#cont-wrap.show.hide {
+    animation : unfoldOut 1s ease forwards;
+}
+@keyframes unfoldOut {
+    0% { transform : scaley(1) scalex(1);}
+    50% { transform : scaley(0.005) scalex(1);}
+    100% { transform : scaley(0.005) scalex(0);}
+}
+
+#cont-wrap.show .cont-bg .cont-box {
+    transform : scale(0);
+    animation :zoomIn 0.5s 0.8s ease forwards;
+}
+#cont-wrap.show.hide .cont-bg .cont-box {
+    transform : scale(0);
+    animation :zoomOut 0.5s ease forwards;
+}
+
+@keyframes zoomIn {
+    0% {transform : scale(0)}
+    100% {transform : scale(1)}
+}
+  
+@keyframes zoomOut {
+    0% {transform : scale(1)}
+    100% {transform : scale(0)}
+}
+  
+
+  
