--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -123,7 +123,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
         @include content;
         width: 100%;
         height: 100vh;
-        background: rgba(180, 176, 176, 0.7);
+        background: rgba(46, 45, 45, 0.7);
         z-index: -1;
     }
 }
@@ -213,15 +213,17 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     color : #fff;
     font-family: $font-NEXON1;
     padding: 20px;
-
+    position: absolute;
+    left: 0;
+    top: 0;
 
     &.right {
-        position: absolute;
+        left : auto;
         right: 0;
-        top: 0;
     }
     &.bottom {
-        position: absolute;
+        top : auto;
+        left : auto;
         bottom: 0;
         right: 0;
 
@@ -233,6 +235,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
             border-radius: 50px;
             box-shadow : 0 0 0 #fff inset;
             transition : all 0.4s;
+            cursor: pointer;
         
             &:hover {
                 box-shadow : 0 -50px 0 #fff inset;
@@ -243,8 +246,8 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
 
 
     h1 {
-        font-weight: 400;
-        font-size: 20px;
+        font-weight: 600;
+        font-size: 40px;
         line-height: 1.6;
         border-bottom: 1px dashed #fff;
         display: inline-block;
@@ -252,7 +255,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     }
     p {
         font-weight: 400;
-        font-size: 16px;
+        font-size: 25px;
     }
   
 
@@ -294,7 +297,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     transform : scale(0);
 
     .cont-bg {
-        background: rgba(119, 92, 79, 0.657);
+        background: rgba(59, 59, 59, 0.657);
         height: 100vh;
         display : flex;
         align-items: center;
@@ -302,11 +305,6 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     }
 
     .cont-box {
-        background: #fff;
-        border-radius :5px;
-        padding: 3vw;
-        max-width : 60vw;
-
         h2 {
             background: #fff;
             border-radius :5px;
@@ -325,6 +323,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
             color : #fff;
             padding: 5px 10px;
             cursor : pointer;
+            margin-top: 10px;
           }
     }
 }
@@ -367,4 +366,73 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
 }
   
 
-  
+// code-view
+
+.code-view {
+    background: #fff;
+    width: 60vw;
+    border : 1px solid #f2f2f2;
+    border-radius: 10px;
+    overflow: hidden;
+
+    .view-header {
+        border-bottom: 1px solid #f2f2f2;
+        .dot {
+            padding: 12px 10px 10px 15px;
+
+            span {
+                width: 12px;
+                height: 12px;
+                display: inline-block;
+                margin: 0 2px;
+                border-radius: 50%;
+            }
+
+            span:nth-child(1){
+                background-color: #f56565;
+            }
+            span:nth-child(2){
+                background-color: #f6e052;
+            }
+            span:nth-child(3){
+                background-color: #48bb78;
+            }
+        }
+    }
+    .view-title {
+        font-family: 'NEXON Lv1 Gothic OTF';
+        border-bottom: 1px solid #f2f2f2;
+        padding: 0 10px;
+        li {
+            display: inline;
+            list-style: none;
+            a {
+                text-decoration: none;
+                color : #cccccc;
+                padding: 10px 10px 12px;
+                margin: 0 5px;
+                display: inline-block;
+            }
+
+            &.active a{
+                border-top: 2px solid #667EEA;
+                color : #4a5568;
+            }
+        }
+    }
+    .view-cont {
+        height: 500px;
+        overflow-y: scroll ;  
+        
+        > div {
+            display: none;
+        }
+        > div:nth-child(1) {
+            display: block;
+        }
+        .html {}
+        .css {}
+        .javascript {}
+        .jquery {}
+    }
+}
