--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -122,6 +122,8 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
 
 
 
+
+
 //bg
 .bg {
     height: 100vh;
@@ -145,6 +147,9 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     }
 }
 
+
+
+//main
 #main {
   width: 100%;
   height: 100vh;
@@ -254,7 +259,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
             }
         }
     }
-
+   
 
     h1 {
         font-weight: 600;
@@ -441,9 +446,194 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
         > div:nth-child(1) {
             display: block;
         }
-        .html {}
-        .css {}
-        .javascript {}
-        .jquery {}
+    }
+}
+
+
+// parallax
+.parallax {
+    background: #222;
+    color: #fff;
+    font-family: 'NEXON Lv1 Gothic OTF';
+}
+
+.paraScroll {
+    position: fixed;
+    left: 20px;
+    bottom: 20px;
+    z-index: 1000;
+    background: rgba(0,0,0,0.4);
+    color : #fff;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    font-size: 12px;
+    text-align: center;
+    padding: 0 20px;
+}
+
+.paraInfo2 {
+    position: fixed;
+    left: 20px;
+    bottom: 70px;
+    z-index: 1000;
+    background: rgba(0,0,0,0.4);
+    color : #fff;
+    font-size: 12px;
+    padding: 20px;
+    border-radius: 10px;
+    line-height: 1.8;
+
+    li {
+        list-style: none;
+    }
+}
+
+
+.paraNav {
+    position: fixed;
+    right: 20px; top: 20px;
+    z-index: 1000;
+    background: rgba(0,0,0,0.4);
+    padding: 15px 20px;
+    border-radius: 50px;
+
+    li {
+        display: inline-block;
+        list-style: none;
+
+        a{
+            color : #fff;
+            text-decoration: none;
+            display: inline-block;
+            padding: 5px;
+            width: 30px; height: 30px;
+            text-align: center;
+            line-height: 30px;
+        }
+
+        &.active a {
+            background: #fff;
+            color : #000;
+            border-radius: 50%;
+        }
+    }
+}
+
+.paraInfo {
+    padding: 20px;
+    h1 {
+        display: inline-block;
+        font-size: 30px;
+        border-bottom: 1px solid #fff;
+        margin-bottom: 8px;
+        font-weight: 700;
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+    }
+    p {
+        font-size: 14px;
+        line-height: 1.8;
+    }
+}
+.paraCont {
+    width: 100%;
+    overflow: hidden;
+
+    .content-item {
+        width: 1000px;
+        max-width: 70vw;
+        // background: rgba(255,255,255,0.3);
+        margin: 30vw 0;
+        padding-top: 10vw;
+        text-align: right;
+        position: relative;
+        .num {
+            font-family: 'Lato';
+            font-weight: 100;
+            font-size: 25vw;
+            opacity: 0.07;
+            position: absolute;
+            right: -5vw; top: -9vw;
+        }
+        .title {
+            padding-bottom: 10px;
+            font-weight: 700;
+        }
+        .img-Wrap {
+            width: 100%;
+            padding-bottom: 56%;
+            background: #000;
+            position: relative;
+            .img {
+                position: absolute;
+                left: 0; top: 0;
+                width: 100%;
+                height: 100%;
+                background-size: cover;
+                background-repeat: no-repeat;
+                filter : saturate(0%);
+                transition : all 1s;
+
+                &:hover {
+                    filter :saturate(100%);
+                }
+            }
+        }
+        .desc {
+            font-size: 3vw;
+            line-height: 1.4;
+            margin-top: -6vw;
+            margin-right: -3vw;
+            position: relative;
+            z-index: 100;
+            word-break: keep-all;
+        }
+        &:nth-child(even){
+            margin-left: auto;
+            text-align: left;
+            .num {
+                right: auto;
+                left: -5vw;
+            }
+            .desc {
+                margin-right: auto;
+                margin-left: -3vw;
+            }
+        }
+    }
+}
+@for $i from 1 through 9 {
+    .content-item {
+        &:nth-child(#{$i}){
+            .img {
+                background-image: url(../img/bg#{$i}.jpg);
+            }
+        }
+    }
+}
+
+.source {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+}
+
+.source button {
+    background: transparent;
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    color: #fff;
+    border-radius: 50px;
+    box-shadow: 0 0 0 #fff inset;
+    transition: all 0.4s;
+    cursor: pointer;
+    
+
+    &:hover {
+        box-shadow : 0 -50px 0 #fff inset;
+        color : #000;
     }
 }
