--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -504,7 +504,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     .code-view .view-title {
       font-size: 14px;
     }
-    #modal .modal-bg .modal-cont button {
+    #cont-wrap .cont-bg .cont-box button {
       padding: 5px 20px;
     }
   }
@@ -692,7 +692,8 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     box-shadow: 0 0 0 #fff inset;
     transition: all 0.4s;
     cursor: pointer;
-    line-height: 15px;
+    text-align: center;
+    line-height: 20px;
     font-size: 15px;
 
     &:hover {
