--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -449,38 +449,26 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     }
 }
 @media (max-width: 900px) {
-    #contents h1 {
+    #contents h1 {                              //메인 화면
       position: absolute;
       left: 50%;
       top: 50%;
       -webkit-transform: translate(-50%, -50%);
               transform: translate(-50%, -50%);
-      font-size: 15vw;
+      font-size: 20vw;
     }
-    #nav {
+    #nav ul {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      text-align: center;
-      -webkit-box-align: unset;
-          -ms-flex-align: unset;
-              align-items: unset;
-      bottom: 10px;
-      width: 100%;
-    }
+    }                                      
     #nav li a {
       font-size: 12px;
       width: 60px;
       height: 32px;
-      line-height: 35px;
+      line-height: 35px;         //메인
     }
-    .info h1 {
+    .info h1 {                  //인포
       font-size: 14px;
     }
     .info p {
@@ -494,7 +482,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     .info.bottom {
       bottom: 10px;
     }
-    .code-view {
+    .code-view {                //소스보기
       width: 90vw;
       overflow: hidden;
     }
@@ -506,6 +494,9 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     }
     #cont-wrap .cont-bg .cont-box button {
       padding: 5px 20px;
+    }
+    .paraNav ul li a {              //패랠랙스
+        font-size: 12px;
     }
   }
 
