--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -139,6 +139,11 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
         background: rgba(46, 45, 45, 0.7);
         z-index: -1;
     }
+    &.blue {
+        &::before {
+            background-color: rgba(19, 88, 199, 0.335);
+        }
+    }
 }
 
 @for $i from 10 through 20 {
@@ -186,7 +191,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
         letter-spacing: 1vw;
         -webkit-text-fill-color: transparent;
         background-clip : text;
-        background-image: linear-gradient(to bottom , #8200c9 , #8200c9);
+        background-image: linear-gradient(to bottom , #8200c9 , #11e8bb);
     }
 }
 
@@ -259,7 +264,11 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
             }
         }
     }
-   
+
+    &.left {
+        top: auto;
+        left: 0; bottom: 0;
+    }
 
     h1 {
         font-weight: 600;
@@ -268,6 +277,11 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
         border-bottom: 1px dashed #fff;
         display: inline-block;
         margin-bottom: 10px;
+
+        a {
+            color : #fff;
+            text-decoration: none;
+        }
     }
     p {
         font-weight: 400;
@@ -278,7 +292,6 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     li {
         list-style: none;
         display: inline;
-
 
         a {
             display: inline-block;
@@ -300,6 +313,18 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
                 color: #000;
             }
         }
+    }
+    &.list {
+        background: rgba(0,0,0,0.4);
+        color : #fff;
+        font-size: 12px;
+        padding: 20px;
+        border-radius: 10px;
+        line-height: 1.8;
+        margin: 20px;
+       li {
+           display: block;
+       }
     }
 }
 
@@ -740,5 +765,35 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
                 color : #000;
             }
         }
+    }
+}
+
+
+
+// mouseContent
+.mouseCont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color : #fff;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    font-family: 'NEXON Lv1 Gothic OTF';
+
+    p {
+        font-size: 2.5vw;
+        line-height: 2.3;
+        font-weight: 300;
+    }
+    h2 {
+        font-size: 3vw;
+        font-weight: normal;
+    }
+    em {
+        font-style: normal;
+        border-bottom : 0.2vw dashed #fffed7;
+        color : #fffed7; 
     }
 }
