--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -190,7 +190,7 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
         text-transform: uppercase;
         letter-spacing: 1vw;
         -webkit-text-fill-color: transparent;
-        background-clip : text;
+        -webkit-background-clip : text;
         background-image: linear-gradient(to bottom , #8200c9 , #11e8bb);
     }
 }
